bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:3: error: not found: type int
   val a:int = Math.abs(n-21);
         ^