bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
   val a:int = Math.abs(n-21);
   if (n>21) {return 2*a}
  else { return a}
}